fixed menu on mobile

--- a/project/index.html
+++ b/project/index.html
@@ -15,12 +15,12 @@
     <div id="grid">
     <nav id="all-nav" class="minimized">
         <a href="index.html" class="logo">Logo</a>
-        <a id="menu-toggle" class="all-menu">
+        <a id="menu-toggle" class="menu">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
         </a>
-        <ul id="all-menu" class="hidden">
+        <ul id="all-menu" class="hidden" class="main-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="behavior.html">Effects</a></li>
             <li><a href="symbol.html">Symbolism</a></li>
