--- a/project/symbol.html
+++ b/project/symbol.html
@@ -12,9 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Quattrocento&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="grid">
     <nav id="all-nav" class="minimized">
-        <a href="index.html" class="logo"><img src="images/red_logo_small.png" alt="star logo"></a>
-        <a id="menu-toggle" class="all-menu">
+        <a href="index.html" class="logo">Logo</a>
+        <a id="menu-toggle" class="menu">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
@@ -26,6 +27,7 @@
             <li><a href="usage.html">Usage</a></li>
         </ul>
     </nav>
+    </div>
 
     <header>
         <hgroup>
